# Play--CodeGen

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CodeGen.sln  CodeGen.vcproj  CodeGen.vcxproj  CodeGen.vcxproj.filters  CodeGenTestSuite.vcproj  CodeGenTestSuite.vcxproj  CodeGenTestSuite.vcxproj.filters  License.txt
.github/workflows/: check-format.yaml
build_android/: AndroidManifest.xml  build.gradle  build.xml  build_debug.sh  build_release.sh  custom_rules.xml  debug_debug.sh  settings.gradle
build_android/gradle/wrapper/: gradle-wrapper.properties
build_android/jni/: Android.mk  Application.mk  ExternalDependencies.mk.template
build_android/res/values/: strings.xml
build_android/src/com/virtualapplications/codegentestsuite/: MainActivity.java
build_android/src/main/: AndroidManifest.xml
build_android/src/main/java/com/virtualapplications/codegentestsuite/: NativeInterop.java
build_android/src/main/jni/: Android.mk
build_cmake/: CMakeLists.txt
build_ios/: CodeGen_Prefix.pch  ExternalDependencies.xcconfig.template  GeneralSettings.xcconfig
build_ios/CodeGen.xcodeproj/: project.pbxproj
build_ios/CodeGen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build_ios/CodeGenTestSuite.xcodeproj/: project.pbxproj
build_ios/CodeGenTestSuite.xcodeproj/xcshareddata/xcschemes/: CodeGenTestSuite.xcscheme
build_ios/Play JIT implementation/: JIT_IMPLEMENTATION_CODEGEN.md  JIT_INTEGRATION_PLAY.md  JIT_MIGRATION_GUIDE_PLAY.md
build_iphone/: CodeGenTestSuite-Info.plist
build_iphone/CodeGen.xcodeproj/: project.pbxproj
build_iphone/CodeGenTestSuite.xcodeproj/: project.pbxproj
build_macosx/: CodeGen_Prefix.pch  ExternalDependencies.xcconfig.template  GeneralSettings.xcconfig
build_macosx/CodeGen.xcodeproj/: project.pbxproj
build_macosx/CodeGenTestSuite.xcodeproj/: project.pbxproj
build_macosx/CodeGenTestSuite.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build_macosx/CodeGenTestSuite.xcodeproj/xcshareddata/xcschemes/: CodeGenTestSuite.xcscheme
build_unix/: CMakeLists.txt
build_uwp/: App.xaml  App.xaml.cpp  App.xaml.h  CodeGen.sln  CodeGen.vcxproj  CodeGen.vcxproj.filters  CodeGenTestSuite.vcxproj  CodeGenTestSuite.vcxproj.filters  CodeGenTestSuite_TemporaryKey.pfx  GeneralSettings.props  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  pch.h
build_win32/: CodeGen.sln  CodeGen.vcxproj  CodeGen.vcxproj.filters  CodeGenTestSuite.vcxproj  CodeGenTestSuite.vcxproj.filters  ExternalDependencies.userprops.template  GeneralSettings.props
include/: AArch32Assembler.h  AArch64Assembler.h  ArmAssembler.h  ArrayStack.h  CoffDefs.h  CoffObjectFile.h  JITMemoryTracker.h  Jitter.h  Jitter_CodeGen.h  Jitter_CodeGenFactory.h  Jitter_CodeGen_AArch32.h  Jitter_CodeGen_AArch64.h  Jitter_CodeGen_Arm.h  Jitter_CodeGen_Wasm.h  Jitter_CodeGen_x86.h  Jitter_CodeGen_x86_32.h  Jitter_CodeGen_x86_64.h  Jitter_Statement.h  Jitter_Symbol.h  Jitter_SymbolRef.h  Jitter_SymbolTable.h  Jitter_Trampoline.h  Literal128.h  LiteralPool.h  MachoDefs.h  MachoObjectFile.h  MemoryFunction.h  MemoryUtil.h  ObjectFile.h  WasmDefs.h  WasmModuleBuilder.h  X86Assembler.h  X86CpuFeatures.h
js/: index.ts  package-lock.json  package.json
src/: AArch32Assembler.cpp  AArch64Assembler.cpp  ArmAssembler.cpp  CoffObjectFile.cpp  JITMemoryTracker.cpp  Jitter.cpp  Jitter_CodeGen.cpp  Jitter_CodeGenFactory.cpp  Jitter_CodeGen_AArch32.cpp  Jitter_CodeGen_AArch32_64.cpp  Jitter_CodeGen_AArch32_Div.h  Jitter_CodeGen_AArch32_Fpu.cpp  Jitter_CodeGen_AArch32_Md.cpp  Jitter_CodeGen_AArch64.cpp  Jitter_CodeGen_AArch64_64.cpp  Jitter_CodeGen_AArch64_Fpu.cpp  Jitter_CodeGen_AArch64_Md.cpp  Jitter_CodeGen_Arm.cpp  Jitter_CodeGen_Arm_64.cpp  Jitter_CodeGen_Arm_Alu.h  Jitter_CodeGen_Arm_Div.h  Jitter_CodeGen_Arm_Fpu.cpp  Jitter_CodeGen_Arm_Md.cpp  Jitter_CodeGen_Arm_Mul.h  Jitter_CodeGen_Arm_Shift.h  Jitter_CodeGen_Wasm.cpp  Jitter_CodeGen_Wasm_64.cpp  Jitter_CodeGen_Wasm_Fpu.cpp  Jitter_CodeGen_Wasm_LoadStore.h  Jitter_CodeGen_Wasm_Md.cpp  Jitter_CodeGen_x86.cpp  Jitter_CodeGen_x86_32.cpp  Jitter_CodeGen_x86_64.cpp  Jitter_CodeGen_x86_Alu.h  Jitter_CodeGen_x86_Div.h  Jitter_CodeGen_x86_Fpu.cpp  Jitter_CodeGen_x86_Fpu_Avx.cpp  Jitter_CodeGen_x86_Fpu_Sse.cpp  Jitter_CodeGen_x86_Md.cpp  Jitter_CodeGen_x86_Md_Avx.cpp  (+25 more)
tests/: AliasTest.cpp  AliasTest.h  AliasTest2.cpp  AliasTest2.h  Align16.h  Alu64Test.cpp  Alu64Test.h  ByteSwapTest.cpp  ByteSwapTest.h  Call64Test.cpp  Call64Test.h  Cmp64Test.cpp  Cmp64Test.h  CompareTest.cpp  CompareTest.h  CompareTest2.cpp  CompareTest2.h  ConditionTest.cpp  ConditionTest.h  Crc32Test.cpp  Crc32Test.h  CursorTest.cpp  CursorTest.h  Div64Test.cpp  Div64Test.h  DivTest.cpp  DivTest.h  DoubleFusedMultiAddTest.cpp  DoubleFusedMultiAddTest.h  ExternJumpTest.cpp  ExternJumpTest.h  FloatFusedMultiAddTest.cpp  FloatFusedMultiAddTest.h  FpClampTest.cpp  FpClampTest.h  FpConvTest.cpp  FpConvTest.h  FpDoubleTest.cpp  FpDoubleTest.h  FpIntMixTest.cpp  (+100 more)
